--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@ body {
 }
 
 div#wrapper{
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: 25%;
+    margin-right: 25%;
     position: relative;
 }
 
