--- a/main.css
+++ b/main.css
@@ -88,15 +88,27 @@ ul.article{
 
 li.article{
     border: 1px solid black;
+    margin-bottom: 10px;
 }
 
 div.innerarticle{
     display: inline-block;
 }
 
+a.innerarticle{
+    position: relative;
+    bottom: 0;
+    float: right;
+    text-decoration: none;
+	padding-bottom: 10px;
+}
+
 iframe.article{
     position: relative;
     left: 0;
+    top: 0;
+	padding-left: 5px;
+	padding-top: 5px;
     width: 400px;
     height: 300px;
 }
