--- a/pages/sitemap.css
+++ b/pages/sitemap.css
@@ -1,9 +1,7 @@
-a:link{
-    color:black;
-}
-a:visited{
+.sitemaplink a:link, .sitemaplink a:visited{
     color: black;
+    text-decoration: none;
 }
-a:hover{
+.sitemaplink a:hover{
     color: purple;
 }
